--- a/pos_product_1.html
+++ b/pos_product_1.html
@@ -78,7 +78,20 @@
                     <li class="submenu-item"><a href=""><i class="bi bi-person-lines-fill"></i> Conseguir un proveedor</a></li>
                 </ul>
             </li>
-            <li><a href="" class="color-white mar-left-20px mar-right-20px">Ofertas</a></li>
+
+            <li class="user-nav-menu">
+                <a href="" class="color-white mar-left-20px mar-right-20px">Ofertas</a>
+                <ul class="submenu bg-color-secondblue">
+                    <!--
+                        Usar solo en temporada de Black Friday
+                        <li class="submenu-item"><a href=""><i class="bi bi-stack"></i>Black Friday</a><li>
+                    -->
+                    <li class="submenu-item"><a href=""><i class="bi bi-percent"></i> Descuentos</a></li>
+                    <li class="submenu-item"><a href=""><i class="bi bi-calendar4-week"></i>Rebajas por temporadas</a><li>
+                    <li class="submenu-item"><a href=""><i class="bi bi-gift"></i>Regalos por compra</a><li>
+                </ul>
+            </li>
+
             <li class="user-nav-menu">
                 <a href="" class="color-white mar-left-20px mar-right-20px">Vender</a>
                 <ul class="submenu bg-color-secondblue">
@@ -139,13 +152,14 @@
                 <div class="dp-flex width-100per mar-top-10px">
 
                     <select name="" class="bg-color-white pad-10px border2 border-radius-rounded" id="">
+                        <option value="">AXS</option>
                         <option value="">Bitcoin</option>
+                        <option value="">BNB</option>
+                        <option value="">Cardano</option>
+                        <option value="">Dogecoin</option>
                         <option value="">Ethereum</option>
                         <option value="">USDT</option>
-                        <option value="">Cardano</option>
                         <option value="">XPR</option>
-                        <option value="">Dogecoin</option>
-
                     </select>
 
   
