--- a/home_nl.html
+++ b/home_nl.html
@@ -178,17 +178,19 @@
 
         <section class="coin-section dp-flex flex-dir-col width-100per pad-50px bg-color-white">
             
-            <h1 class="reasons-home-title mar-bottom-20px align-self-center text-align-center">Aceptamos criptoactivos:</h1>
+            <h1 class="reasons-home-title mar-bottom-20px align-self-center text-align-center">Aceptamos criptoactivos</h1>
             <ul class="home-coin-list dp-flex justify-cnt-se mar-top-20px">
                 <li><img src="assets/img/btc-logo.png" class="coin-home-img" alt="Bitcoin Logo"></li>
                 <li><img src="assets/img/eth-logo.png" class="coin-home-img" alt="Ethereum Logo"></li>
                 <li><img src="assets/img/usdt-logo.png" class="coin-home-img" alt="USDT Logo"></li>
+                <li><img src="assets/img/bnb.png" class="coin-home-img" alt="BNB Logo"></li>
             </ul>
 
             <ul class="home-coin-list dp-flex justify-cnt-se mar-top-20px">
                 <li><img src="assets/img/doge-logo.png" class="coin-home-img" alt="Dogecoin Logo"></li>
                 <li><img src="assets/img/cardano-logo.png" class="coin-home-img" alt="Cardano Logo"></li>
                 <li><img src="assets/img/xpr-logo.png" class="coin-home-img" alt="XPR logo"></li>
+                <li><img src="assets/img/axs.png" class="coin-home-img" alt="AXS logo"></li>
             </ul>
 
         </section>
