--- a/my_account_refunds_1.html
+++ b/my_account_refunds_1.html
@@ -76,7 +76,20 @@
                     <li class="submenu-item"><a href=""><i class="bi bi-person-lines-fill"></i> Conseguir un proveedor</a></li>
                 </ul>
             </li>
-            <li><a href="" class="color-white mar-left-20px mar-right-20px">Ofertas</a></li>
+
+            <li class="user-nav-menu">
+                <a href="" class="color-white mar-left-20px mar-right-20px">Ofertas</a>
+                <ul class="submenu bg-color-secondblue">
+                    <!--
+                        Usar solo en temporada de Black Friday
+                        <li class="submenu-item"><a href=""><i class="bi bi-stack"></i>Black Friday</a><li>
+                    -->
+                    <li class="submenu-item"><a href=""><i class="bi bi-percent"></i> Descuentos</a></li>
+                    <li class="submenu-item"><a href=""><i class="bi bi-calendar4-week"></i>Rebajas por temporadas</a><li>
+                    <li class="submenu-item"><a href=""><i class="bi bi-gift"></i>Regalos por compra</a><li>
+                </ul>
+            </li>
+
             <li class="user-nav-menu">
                 <a href="" class="color-white mar-left-20px mar-right-20px">Vender</a>
                 <ul class="submenu bg-color-secondblue">
