--- a/chat_section.html
+++ b/chat_section.html
@@ -178,6 +178,20 @@
 
                 <div class="chat__remittent-message-container pad-10px">
                     <p class="chat__remittent-message-text dp-flex pad-10px border-radius-rounded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, deleniti.</p>
+                </ul>
+
+            </header>
+
+            <div class="chat__chat-container dp-flex flex-dir-col pad-20px">
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt rem.
+                    </p>
+                </div>
+
+                <div class="chat__remittent-message-container pad-10px">
+                    <p class="chat__remittent-message-text dp-flex pad-10px border-radius-rounded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, deleniti.</p>
                 </div>
 
                 <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
@@ -190,11 +204,87 @@
                 <div class="chat__remittent-message-container pad-10px">
                     <p class="chat__remittent-message-text dp-flex pad-10px border-radius-rounded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, deleniti.</p>
                 </div>
+
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                </div>
+
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt rem.
+                    </p>
+                </div>
+
+                <div class="chat__remittent-message-container pad-10px">
+                    <p class="chat__remittent-message-text dp-flex pad-10px border-radius-rounded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, deleniti.</p>
+                </div>
+
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt rem.
+                    </p>
+                </div>
+
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt rem.
+                    </p>
+                </div>
+
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt rem.
+                    </p>
+                </div>
+
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt rem.
+                    </p>
+                </div>
+
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt rem.
+                    </p>
+                </div>
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt rem.
+                    </p>
+                </div>
+
+                <div class="chat__receiver-message-container dp-flex align-items-center pad-10px">
+                    <a href=""><img src="assets/img/jane.png" class="chat__remittent-img" alt=""></a>
+                    <p class="chat__receiver-message-text pad-10px mar-left-10px border-radius-rounded">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam sunt rem.
+                    </p>
+                </div>
+
+                <div class="chat__remittent-message-container pad-10px">
+                    <p class="chat__remittent-message-text dp-flex pad-10px border-radius-rounded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, deleniti.</p>
+                </div>
+
+                <div class="chat__remittent-message-container pad-10px">
+                    <p class="chat__remittent-message-text dp-flex pad-10px border-radius-rounded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, deleniti.</p>
+                </div>
+
+                <div class="chat__remittent-message-container pad-10px">
+                    <p class="chat__remittent-message-text dp-flex pad-10px border-radius-rounded">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, deleniti.</p>
+                </div>
                 
 
             </div>
 
-            <div class="width-100per pad-left-20px pad-right-20px">
+            <div class="width-100per pad-left-20px pad-right-20px pad-top-20px">
                 <form action="" class="chat__message-form">
                     <!--Este text area debe ser autoincrementar sus filas (rows) cuando el usuario exceda
                     los X caracteres (x = num a determinar por los devs)-->
